--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #af094b; /* Grey background for your desktop */
+    background-color: #af094b; /* pink background for your desktop */
     display: flex;
     justify-content: center;
     align-items: center;
